# routes/productRoutes.js
@@ -7,7 +7,7 @@ const roleAuthorization = require('../middleware/roleMiddleware')
 const productController = require('../controllers/productController')
 
 // Ruta para crear un nuevo producto
-router.post('/create-product',auth, roleAuthorization(['admin']), productController.createProduct);
+router.post('/',auth, roleAuthorization(['admin']), productController.createProduct);
 // Ruta para añadir varios productos a la vez
 router.post('/create-multiple-products', auth, roleAuthorization(['admin']), productController.createMultipleProducts);
 
@@ -18,9 +18,9 @@ router.get('/category/:category', productController.getProductsByCategory);
 
 
 //Modifier un produit
-router.put('/:id/update', auth, roleAuthorization(['admin']), productController.modifyProduct)
+router.put('/:id', auth, roleAuthorization(['admin']), productController.modifyProduct)
 // delete
-router.delete ('/:id/delete', auth, roleAuthorization(['admin']), productController.deleteProduct)
+router.delete ('/:id', auth, roleAuthorization(['admin']), productController.deleteProduct)
 
 
 
